# tg-graphs

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/plugins/: hourly_activity.py  messages_counter.py  radio_silence.py  reactions_per_user.py  reply_network.py
src/plugins/friend_research/: __init__.py  activity_patterns.py  contribution_score.py  friendship_balance.py  group_dynamics.py  topic_analysis.py
src/plugins/girlfriend_research/: __init__.py  attachment_style.py  complaint_meter.py  deep_analysis.py  emotional_balance.py  initiative_ratio.py  interest_reciprocity.py  love_language.py  message_length_balance.py  relationship_summary.py  response_time.py  support_balance.py  text_analyzer.py  toxicity_detector.py
src/plugins/girlfriend_research_onlyfans/: __init__.py  desire_dynamics.py  flirt_style.py  horny_meter.py  intimacy_calendar.py  ovulation_detector.py  sex_islands.py  sexting_analyzer.py
tests/: test_main.py
